--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Data Structures</h3>
-                        <p class="text-muted">Capable of working with others and being a leader.</p>
+                        <p class="text-muted">STUF STUF STUF STUF</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Thankful</h3>
-                        <p class="text-muted">Thrilled and grateful that you would take the time to checkout my website.</p>
+                        <h3>something ele</h3>
+                        <p class="text-muted">other stuff other stuff other stuff</p>
                     </div>
                 </div>
             </div>
