--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Data Structure
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Gitlet: A basic version of git using data structures such as Hash Maps, Hash Sets, Linked Lists, and serialized files (link goes to project specifications)
                                 </div>
                             </div>
                         </div>
