--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    PathTracer
+                                    PathTracer(NOT YET POSTED BUT WILL BE UPDATED SOON)
                                 </div>
                             </div>
                         </div>
@@ -196,14 +196,14 @@
                                     Animation
                                 </div>
                                 <div class="project-name">
-                                    A Tail Tale (WARNING: Links to a video)
+                                    A Tail Tale (Warning: Links to a video)
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" class="portfolio-box">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -211,22 +211,22 @@
                                     Data Structure
                                 </div>
                                 <div class="project-name">
-                                    Gitlet</br> A basic version of git using data structures such as Hash Maps, Hash Sets, Linked Lists, and serialized files (link goes to project specifications)
+                                    Gitlet</br> A basic version of git using data structures such as Hash Maps, Hash Sets, Linked Lists, and serialized files. (link goes to project specifications)
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" class="portfolio-box">
+                        <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Computer Architecture
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    CPU, ALU, and Regfile</br> Designed a CPU(central processing unit) on Logism by first designing the ALU(arithmetic logic unit), register file, memory, and pipelining the CPU. link goes to project specifications)
                                 </div>
                             </div>
                         </div>
