--- a/index.html
+++ b/index.html
@@ -254,13 +254,25 @@
                     <hr class="primary">
                     <p>If you want to contact me, you can email me or you can send me a message on LinkedIn. You can also find my GitHub and Facebook as well.</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                    <p>(909) 896-9844</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:vincent.escueta22@gmail.com">vincent.escueta22@gmail.com</a></p>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></p>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://github.com/vincent-escueta22">GitHub</a></p>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></p>
                 </div>
 <!--                     <p>
                       <button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
