--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://cs184.eecs.berkeley.edu/cs184_sp16/article/10" class="portfolio-box portfolio-link">
+                    <a href="http://cs184.eecs.berkeley.edu/cs184_sp16/article/10" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -203,7 +203,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" class="portfolio-box portfolio-link">
+                    <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -218,7 +218,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" class="portfolio-box portfolio-link">
+                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -241,7 +241,7 @@
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
                 <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-4x fa-save fa-download wow bounceIn text-primary" data-wow-delay=".1s"></i>Download Now!</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary" data-wow-delay=".1s"></i>Download Now!</a>
             </div>
         </div>
     </section>
@@ -255,24 +255,20 @@
                     <p>If you want to contact me, you can email me or you can send me a message on LinkedIn. You can also find my GitHub and Facebook as well.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>(909) 896-9844</p>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:vincent.escueta22@gmail.com">vincent.escueta22@gmail.com</a></p>
+                    <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank">Email</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic" target="_blank">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://github.com/vincent-escueta22">GitHub</a></p>
+                    <p><a href="https://github.com/vincent-escueta22">GitHub target="_blank"</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></p>
+                    <p><a href="https://www.facebook.com/vincent.escueta22">Facebook target="_blank"</a></p>
                 </div>
 <!--                     <p>
                       <button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
