--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-save wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Data Structures</h3>
-                        <p class="text-muted">Asymptotics, Algotithms Hashing, Heaps, Sorting, Trees, Bounds, Graphs</p>
+                        <p class="text-muted">Asymptotics, Algorithms Hashing, Heaps, Sorting, Trees, Bounds, Graphs</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
