--- a/index.html
+++ b/index.html
@@ -255,15 +255,15 @@
                     <p>If you want to contact me, you can email me or you can send me a message on LinkedIn. You can also find my GitHub and Facebook as well.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".2s"></i>
                     <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank">Email</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <i class="fa fa-linkedin fa-3x wow bounceIn"></i>
                     <p><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic" target="_blank">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".3s"></i>
                     <p><a href="https://github.com/vincent-escueta22" target="_blank">GitHub</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
