--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
-                    <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+                    <img class="img-circle" src="img/linkedinphoto.jpg">
                     <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://cs184.eecs.berkeley.edu/cs184_sp16/article/10" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="cs184_proj_3/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -151,7 +151,7 @@
                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    PathTracer(NOT YET POSTED BUT WILL BE UPDATED SOON, CURRENTLY LINKS TO THE PROJECT SPECS)
+                                    PathTracer
                                 </div>
                             </div>
                         </div>
