--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -231,10 +231,10 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_4/index.html" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/cpu.jpg" class="img-responsive" alt="">
+                        <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
