--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                     <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="https://www.facebook.com/vincent.escueta22" target="_blank">Facebook</a></p>
                 </div>
+                <p>Last Updated: April 15, 2016</p>
 <!--                     <p>
                       <button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
                       <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
