--- a/Colorizing.html
+++ b/Colorizing.html
@@ -67,75 +67,75 @@
       <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
         <div class="slideshow-container">
          <div class="slide">
-                    <img src="img/emirEdgeColored.jpg"  >
+                    <img src="Images/img/emirEdgeColored.jpg"  >
                     <p align="middle">canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</p>
         </div>
          <div class="slide">
-                    <img src="img/harvestersEdgeColored.jpg"  >
+                    <img src="Images/img/harvestersEdgeColored.jpg"  >
                     <p align="middle">canny edge filter harvesters.tif: R:[124  15] G:[60 18] TIME:25.585105896</p>
         </div>
          <div class="slide">
-                    <img src="img/iconEdgeColored.jpg"  >
+                    <img src="Images/img/iconEdgeColored.jpg"  >
                     <p align="middle">canny edge filter icon.tif: R:[91 23] G:[38 16] TIME:26.5196139812</p>
         </div>
          <div class="slide">
-                    <img src="img/ladyEdgeColored.jpg"  >
+                    <img src="Images/img/ladyEdgeColored.jpg"  >
                     <p align="middle">canny edge filter lady.tif: R:[114  15] G:[56  9] TIME:29.0473020077</p>
         </div>
         <div class="slide">
-                    <img src="img/self_portraitEdgeColored.jpg"  >
+                    <img src="Images/img/self_portraitEdgeColored.jpg"  >
                     <p align="middle">canny edge filter self_portrait.tif: R:[175  37] G:[77 29] TIME:28.707857132</p>
         </div>
          <div class="slide">
-                    <img src="img/three_generationsEdgeColored.jpg"  >
+                    <img src="Images/img/three_generationsEdgeColored.jpg"  >
                     <p align="middle">canny edge filter three_generations.tif: R:[113  11] G:[54 17] TIME:26.2358720303</p>
         </div>
          <div class="slide">
-                    <img src="img/trainEdgeColored.jpg"  >
+                    <img src="Images/img/trainEdgeColored.jpg"  >
                     <p align="middle">canny edge filter train.tif: R:[85 34] G:[40  8] TIME:26.7940208912</p>
         </div>
          <div class="slide">
-                    <img src="img/turkmenEdgeColored.jpg"  >
+                    <img src="Images/img/turkmenEdgeColored.jpg"  >
                     <p align="middle">canny edge filter turkmen.tif: R:[116  29] G:[57 22] TIME:27.184166193</p>
         </div>
          <div class="slide">
-                    <img src="img/luganoEdgeColored.jpg"  >
+                    <img src="Images/img/luganoEdgeColored.jpg"  >
                     <p align="middle">extra lugano.tif: R:[120  32] G:[54  7] TIME:36.9884650707</p>
         </div>
          <div class="slide">
-                    <img src="img/stmarksEdgeColored.jpg"  >
+                    <img src="Images/img/stmarksEdgeColored.jpg"  >
                     <p align="middle">extra stmarks.tif: R:[113  30] G:[47 13] TIME:34.7976961136 </p>
         </div>
          <div class="slide">
-                    <img src="img/telescopeEdgeColored.jpg"  >
+                    <img src="Images/img/telescopeEdgeColored.jpg"  >
                     <p align="middle">extra telescope.tif: R:[144  54] G:[67 30] TIME:37.0999400616</p>
         </div>
          <div class="slide">
-                    <img src="img/mozhaiskEdgeColored.jpg"  >
+                    <img src="Images/img/mozhaiskEdgeColored.jpg"  >
                     <p align="middle">extra mozhaisk.tif: R:[92 25] G:[41 15] TIME:35.2776269913</p>
         </div>
          <div class="slide">
-                    <img src="img/peopleEdgeColored.jpg"  >
+                    <img src="Images/img/peopleEdgeColored.jpg"  >
                     <p align="middle">extra people.tif: R:[157  33] G:[72 21] TIME:34.1512980461</p>
         </div>
          <div class="slide">
-                    <img src="img/people2EdgeColored.jpg"  >
+                    <img src="Images/img/people2EdgeColored.jpg"  >
                     <p align="middle">extra people2.tif: R:[133  39] G:[62 25] TIME:34.4929409027 </p>
         </div>
          <div class="slide">
-                    <img src="img/cathedralEdgeColored.jpg"  >
+                    <img src="Images/img/cathedralEdgeColored.jpg"  >
                     <p align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</p>
         </div>
          <div class="slide">
-                    <img src="img/monasteryEdgeColored.jpg"  >
+                    <img src="Images/img/monasteryEdgeColored.jpg"  >
                     <p align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</p>
         </div>
         <div class="slide">
-                    <img src="img/nativityEdgeColored.jpg"  >
+                    <img src="Images/img/nativityEdgeColored.jpg"  >
                     <p align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</p>
         </div>
          <div class="slide">
-                    <img src="img/settlersEdgeColored.jpg"  >
+                    <img src="Images/img/settlersEdgeColored.jpg"  >
                     <p align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</p>
         </div>
          <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
@@ -156,37 +156,37 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/monastery.jpg"  >
+                    <img src="Images/img/monastery.jpg"  >
                     <p align="middle">Figure 0: Blue, green, and red filtered images</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/monasteryBasicColored.jpg"  >
+                    <img src="Images/img/monasteryBasicColored.jpg"  >
                     <p align="middle">Figure 1: all pixels of monastery.jpg: R:[8 1] G:[-6  0] TIME:0.565473079681</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/monasteryNaiveColored.jpg"  >
+                    <img src="Images/img/monasteryNaiveColored.jpg"  >
                     <p align="middle">Figure 2: middle 50% of pixels monastery.jpg: R:[2 2] G:[-3  2] TIME:0.41522693634</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/nativityBasicColored.jpg"  >
+                    <img src="Images/img/nativityBasicColored.jpg"  >
                     <p align="middle">Figure 3: all pixels of nativity.jpg: R:[7 1] G:[4 1] TIME:0.594136953354</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/nativityNaiveColored.jpg"  >
+                    <img src="Images/img/nativityNaiveColored.jpg"  >
                     <p align="middle">Figure 4: middle 50% of pixels nativity.jpg: R:[8 0] G:[3 1] TIME:0.450391054153</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/settlersBasicColored.jpg"  >
+                    <img src="Images/img/settlersBasicColored.jpg"  >
                     <p align="middle">Figure 5: all pixels of settlers.jpg: R:[14 -1] G:[7 0] TIME:0.823676109314</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/settlersNaiveColored.jpg"  >
+                    <img src="Images/img/settlersNaiveColored.jpg"  >
                     <p align="middle">Figure 6: middle 50% of pixels settlers.jpg: R:[14 -1] G:[7 0] TIME:0.405462026596</p>
                     </div>
                 </div>
@@ -198,21 +198,21 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/cathedralTimeColored.jpg" >
+                    <img src="Images/img/cathedralTimeColored.jpg" >
                     <p align="middle">Figure 7: Naive cathedral.jpg: R:[12  3] G:[5 2] TIME:2.9832880497.</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/cathedralNaiveColored.jpg" >
+                    <img src="Images/img/cathedralNaiveColored.jpg" >
                     <p align="middle">Figure 8: Image Pyramid cathedral.jpg: R:[12  3] G:[5 2] TIME:0.675570011139.</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/iconTimeColored.jpg" >
+                    <img src="Images/img/iconTimeColored.jpg" >
                     <p align="middle">Figure 9: Naive icon.tif: R:[15 12] G:[15 14] TIME:316.376515865.</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/iconNaiveColored.jpg" >
+                    <img src="Images/img/iconNaiveColored.jpg" >
                     <p align="middle">Figure 10: Image Pyramid icon.tif: R:[89 23] G:[41 17] TIME:17.6947059631</p>
                     </div>
                 </div>
@@ -223,21 +223,21 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/self_portraitNaiveColored.jpg"  >
+                    <img src="Images/img/self_portraitNaiveColored.jpg"  >
                     <p align="middle">Figure 1: middle 50% of pixels self_portrait.tif: R:[175  37] G:[78 29] TIME:13.4188771248</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/three_generationsNaiveColored.jpg"  >
+                    <img src="Images/img/three_generationsNaiveColored.jpg"  >
                     <p align="middle">Figure 12: middle 50% of pixels of three_generations.tif: R:[110  12] G:[52 14] TIME:14.5100548267</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/turkmenNaiveColored.jpg"  >
+                    <img src="Images/img/turkmenNaiveColored.jpg"  >
                     <p align="middle">Figure 13: middle 50% of pixels turkmen.tif: R:[116  28] G:[55 21] TIME:13.3178520203</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/villageNaiveColored.jpg"  >
+                    <img src="Images/img/villageNaiveColored.jpg"  >
                     <p align="middle">Figure 14: middle 50% of pixels village.tif: R:[137  22] G:[64 12] TIME:15.6597101688</p>
                     </div>
                 </div>
@@ -247,17 +247,17 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/emirBasicColored.jpg"  >
+                    <img src="Images/img/emirBasicColored.jpg"  >
                     <p align="middle">Figure 15: all pixels of emir.tif: R:[107  17] G:[-3  7] TIME:14.2561810017</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/emirNaiveColored.jpg"  >
+                    <img src="Images/img/emirNaiveColored.jpg"  >
                     <p align="middle">Figure 16: middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/emirEdgeColored.jpg"  >
+                    <img src="Images/img/emirEdgeColored.jpg"  >
                     <p align="middle">Figure 17: canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</p>
                     </div>
                 </div>
